--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ project (KeePassLib
 
 set (CMAKE_CXX_STANDARD 11)
 
+set(CMAKE_MODULE_PATH 
+    ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/"
+    )
+
 add_library (keepass_objs
     OBJECT
       KeePassFileException.h
